--- a/style/style.css
+++ b/style/style.css
@@ -4,12 +4,35 @@ html {
 
 body {
   background-color: #000000;
-  padding: 100px 250px;
+  padding: 50px 0;
+  font-family: 'DM Sans', sans-serif;
 }
 
 .wrapper {
+  
   background-color: #ffffff;
   border-radius: 10px;
+  box-shadow: 0 0 20px 5px #bdae82;
+  width: 1000px;
+  margin: 0 auto;
+
+}
+
+header {
+  position: sticky;
+  top: -10px;
+  z-index: 10;
+}
+
+h1 {
+  margin: 0px;
+  padding: 20px 0 40px 0;
+}
+
+h2 {
+  margin: 0px;
+  padding: 30px 0 25px 0;
+  text-align: center;
 }
 
 .navigation {
@@ -30,6 +53,7 @@ body {
   padding: 0;
   display: flex;
   justify-content: space-between;
+  gap: 15px;
   list-style: none;
 }
 
@@ -43,17 +67,15 @@ body {
   color: #ffffff;
 }
 
-.navigation nav {
-  width: 500px;
-}
-
 main {
-  padding: 0 40px;
+  padding: 10px 40px 30px 40px;
+  font-size: 18px;
 }
 
 .nameUser img {
   width: 200px;
   height: 300px;
+  box-shadow: 0 0 15px 5px #bdae82;
 }
 
 .nameUser {
@@ -65,8 +87,14 @@ main {
 
 .information_me{
   display: flex;
-  gap: 150px;
+  gap: 0 150px;
   align-items: center;
+  flex-wrap: wrap;
+}
+
+.contact_data {
+  margin: 0;
+  font-weight: 600;
 }
 
 .сontact a {
@@ -76,4 +104,138 @@ main {
 
 .сontact a:hover {
   color: #bdae82;
+}
+
+.сontact li {
+  padding-bottom: 15px;
+}
+
+.about_me,
+.skills,
+.code_example,
+.experience,
+.education,
+.languages,
+.сontact {
+  padding-top: 15px;
+  position: relative;
+}
+
+.anchor {
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: -60px;
+}
+
+.skills img {
+  width: 100px;
+  height: 100px;
+}
+
+.skills ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px 120px;
+}
+
+.skills li {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  padding-bottom: 10px;
+  font-size: 18px;
+  width: 260px;
+}
+
+.code_example code {
+  display: flex;
+  align-items: center;
+  border: 2px solid #000000;
+  border-radius: 10px;
+  background-color: #bdae82;
+}
+
+.experience a {
+  text-decoration: none;
+  color: #000000;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.experience a:hover {
+  color: #bdae82;
+}
+
+.experience img {
+  height: 145px;
+  width: 280px;
+}
+
+.experience li {
+  display: flex;
+  flex-direction: column;
+  gap: 15px 0;
+}
+
+.experience ul {
+  padding: 0;
+  padding-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 40px 125px;
+}
+
+.education img {
+  width: 320px;
+  height: 155px;
+}
+
+.education_list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.education ul {
+  display: flex;
+flex-direction: column;
+  gap: 15px;
+}
+
+.languages img {
+  width: 450px;
+  height: 165px;
+  border: 1px solid #3fafd1;
+}
+
+.english {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.information {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 10px;
+  background-color: #bdae82;
+  height: 100%;
+  padding: 10px 40px;
+}
+
+.rs_school,
+.GitHub_Logo {
+  height: 50px;
+  width: 135px;
+}
+
+
+.information p{
+  font-size: 22px;
+  font-weight: bold;
 }
